# mlir-macos-crash

./: CMakeLists.txt
include/: CMakeLists.txt  Ops.h  Test.td  TestDialect.h  TestDialect.td
lib/dialect/: CMakeLists.txt  Ops.cpp  TestDialect.cpp
tool/: CMakeLists.txt
tool/test-opt/: CMakeLists.txt  main.cpp
